--- a/kodilla-html-css/index.html
+++ b/kodilla-html-css/index.html
@@ -4,9 +4,9 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-<h1>Kodilla Course</h1>
-<p><i>Something new!!!</i></p>
-<h2> HTML and CSS</h2>
-<p><strong>Good Morning!</strong> Time to learn HTML!</p>
+    <h1>Kodilla Course</h1>
+    <p><i>Something new!!!</i></p>
+    <h2> HTML and CSS</h2>
+    <p><strong>Good Morning!</strong> Time to learn HTML!</p>
 </body>
-</html>
+</html>git add
